--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ ASALocalRun/
 /Flight Booking System/out/build/x64-Debug/.cmake
 /Flight Booking System/out/build/x64-Debug/.ninja_deps
 /Flight Booking System/out/build/x64-Debug/.ninja_log
+/Flight Booking System/out/build/x64-Debug/CMakeTarget.exe
