--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,4 @@ ASALocalRun/
 /Flight Booking System/out/build/x64-Debug/.cmake/api/v1/query/client-MicrosoftVS/query.json
 /Flight Booking System/out/build/x64-Debug/.ninja_deps
 /Flight Booking System/out/build/x64-Debug/.ninja_log
+/Flight Booking System/out/build/x64-Debug/.cmake/api/v1/reply/index-2019-10-30T13-04-54-0824.json
