--- a/Flight Booking System/CMakeLists.txt
+++ b/Flight Booking System/CMakeLists.txt
@@ -6,5 +6,5 @@ Project("Flight Booking System")
 # Add source to this project's executable.
 add_executable (CMakeTarget "Flight Booking System.cpp" "Flight Booking System.h"
 "Plane.h" "Plane.cpp" "Passenger.h" "Passenger.cpp" "Flight.h" "Flight.cpp" 
-"Date.h" "Date.cpp" "MainMenu.cpp" "Sorting.cpp" "Searching.cpp" "LoadData.cpp" "4NovSnapshot.csv")
+"Date.h" "Date.cpp" "MainMenu.cpp" "Sorting.cpp" "Searching.cpp" "LoadData.cpp")
 # TODO: Add tests and install targets if needed.
